# crews

./: .gitignore  README.md  pyproject.toml
src/crews/: crew.py  main.py
src/crews/config/: agents.yaml  tasks.yaml
src/crews/tools/: youtube.py
